# bazel-demo

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  demo_script.sh  gazelle_python.yaml  pyproject.toml  requirements.in  requirements.txt
app/kotlin/: BUILD
app/kotlin/src/main/kotlin/com/demo/models/: BUILD  SharedModels.kt
app/kotlin/src/main/kotlin/com/demo/service/: BUILD  KotlinService.kt
app/python/: BUILD.bazel  main.py
app/python/src/: BUILD.bazel  utils.py
