[project]
name = "example"
version = "0.1.0"
dependencies = [
    "aiohttp==3.12.14",
    "aiohttp-retry==2.9.1",
    "alembic==1.16.2",
    "azure-identity==1.23.0",
    "azure-storage-blob==12.25.1",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.13.5",
    "bm25s==0.2.13",
    "coverage==7.9.1",
    "dash==3.1.1",
    "dash-bootstrap-components==2.0.3",
    "einops==0.8.0",
    "fastapi==0.116.1",
    "flagembedding==1.2.11",
    "flask-login==0.6.3",
    "gunicorn==23.0.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "langdetect==1.0.9",
    "omegaconf==2.3.0",
    "openai==1.81.0",
    "openai-agents==0.0.17",
    "opik>=1.8.38",
    "passlib==1.7.4",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "pyjwt[crypto]==2.10.1",
    "pytest==8.4.1",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "qdrant-client==1.14.2",
    "redis==6.0.0",
    "ruff==0.11.6",
    "spacy==3.8.7",
    "sqlalchemy==2.0.40",
    "starlette==0.47.2",
    "streamlit==1.45.1",
    "tiktoken==0.9.0",
    "unidecode==1.4.0",
    "uvicorn==0.23.2",
    "uvloop==0.21.0",
]
