load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# Gazelle directives for auto-generating BUILD files
# gazelle:python_root

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//app/python/src",
        "@pip//fastapi",
        "@pip//numpy",
        "@pip//pandas",
        "@pip//requests",
        "@pip//types_requests",
        "@pip//uvicorn",
    ],
)

py_library(
    name = "python",
    srcs = ["main.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//app/python/src",
        "@pip//fastapi",
        "@pip//numpy",
        "@pip//pandas",
        "@pip//requests",
        "@pip//types_requests",
        "@pip//uvicorn",
    ],
)
